tdf#95656 fix orientation for Bopomofo tonal marks

A few Spacing Modifier Letters ( 0x2ca, 0x2c7, 0x2cb, 0x2d9 )
are used as Bopomofo tonal marks.

This patch force their vertical orientation property
to be transformed upright.

This patch also set the script type of them to WEAK
to keep them with nearby Bopomofo symbols in the same portion.

Change-Id: Ib226ebbcaf140124dee806dd6b2859150eb53f67